# rex

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  ATTORNEY_OUTREACH_ONESHEET.md  CLAUDE.md  CLI-GUIDE.md  CODEBASE_ANALYSIS.md  CODEBASE_QUICK_REFERENCE.md  EXECUTIVE-SUMMARY.md  GROQ_SETUP_GUIDE.md  HARMONY_PLUS_CHANGES.md  KANANA_GUARDRAIL_ASSESSMENT.md  KANANA_SIREN_PERFORMANCE_ASSESSMENT.md  KANON2_INTEGRATION_DOCS.md  KANON2_INTEGRATION_SUMMARY.md  M1_IMPLEMENTATION_GUIDE.md  M1_OCR_CORRECTED.md  Next_plan.md  PHASE_DECISION_MVP_FIRST.md  PM-READINESS-REPORT.md  PROJECT_REVIEW.md  PR_DESCRIPTION.md  QUICK_TEST_GROQ.md  README.md  README_UPDATE_PLAN.md  REFINEMENTS_SUMMARY.md  REVIEWER_FEEDBACK_RESOLUTION.md  SCORECARD_ISSUE_REFINED.md  SECURITY.md  SETUP.md  SPRINT1_CODE_REVIEW.md  SPRINT1_IMPLEMENTATION_REVIEW.md  SPRINT1_PR_DESCRIPTION.md  SPRINT_2_TACTICAL_PLAN.md  START_HERE.md  TEST_SECURITY_BOUNDARIES.md  TOMORROW-SPRINT-PLAN.md  UI_DOCUMENTATION_SUMMARY.md  (+5 more)
.claude/: FOUNDER_GOALS.md  FRONTEND_POLISH_SUMMARY.md
.claude/admin/: CLI-GUIDE.md  juul_nc_email_review_protocol_v2.md  juul_nc_hot_doc_v1_harmony.md
.claude/analysis/: litigation-workflow-analysis.md
.claude/architecture/: ARCHITECTURE.md  CODEBASE_OVERVIEW.md  EXPLORATION_SUMMARY.md
.claude/code-reviews/: CODE_REVIEW_PR3_FINDINGS.md  KIERAN_CODE_REVIEW_FIXES.md
.claude/documentation/: DOCS_CONSISTENCY_CHECK.md
.claude/explorations/: CONCRETE_CODE_FINDINGS.md  PDF_VIEWING_ARCHITECTURE_DISCOVERY.md  PDF_VIEWING_IMPLEMENTATION_SUMMARY.md
.claude/implementation/: OCR_IMPLEMENTATION_REVIEW.md  PII_PRIVILEGE_INTEGRATION_DOCS.md  PII_PRIVILEGE_INTEGRATION_SUMMARY.md
.claude/integration/: github_issue_kanon2_integration.md
.claude/plans/: LEGAL_HIGHLIGHTER_IMPLEMENTATION_PLAN.md  chug-idl-fixture-integration.md
.claude/reviews/: PR34_REVIEW.md
.claude/setup/: LM_STUDIO_SETUP.md
.claude/sprints/: HIGHLIGHTER_EXECUTIVE_SUMMARY.md  LEGAL_HIGHLIGHTER_TECHNICAL_DESIGN.md  NEXT_PRIORITIES_DEEP_DIVE.md  NEXT_STEPS.md  Next_plan.md  SPRINT_1_TACTICAL_PLAN.md
.claude/summaries/: HARMONY_PLUS_EXECUTIVE_SUMMARY.md  HARMONY_PLUS_QUICK_REFERENCE.md  HARMONY_PLUS_REAL_RESULTS.md  HARMONY_PLUS_SUMMARY.md  HARMONY_VS_STAGE1_ANALYSIS.md
.claude/testing/: PRIVILEGE_TEST_SAMPLES_ANALYSIS.md  SECURITY.md
.claude/ui/: FRONTEND_DESIGN_BRIEF.md
.cursor/plans/: r-cb177796.plan.md
.github/: BRANCH_WORKFLOW.md
.github/workflows/: ci.yml
api/: .env.example  CLAUDE.md  REXLIT_HOME_SETUP.md  SETUP.md  TEST_SECURITY_BOUNDARIES.md  index.test.ts  index.ts  package.json
api/tests/: privilege_api.test.ts
archive/kanon2-integration-2025-10/: kanon2_integration_todo.md
context/: deepseek_ocr.md
docs/: BENCHMARKING.md  DENSE_HYBRID_RETRIEVAL_BEST_PRACTICES.md  FEATURE_FLAGS.md  FONTS_SETUP.md  INSTALL.md  REXLIT_PURVIEW_INTEGRATION_STRATEGY.md  REXLIT_VS_MICROSOFT_PURVIEW.md  SELF_HOSTED_EMBEDDINGS.md  UI_ARCHITECTURE.md  UI_IMPLEMENTATION_GUIDE.md  UI_QUICKSTART.md  UI_README.md  UI_SMOKE_CHECKS.md  elysia-cheat-sheet.md
docs/adr/: 0001-offline-first-gate.md  0002-ports-adapters-import-contracts.md  0003-determinism-policy.md  0004-jsonl-schema-versioning.md  0005-bates-numbering-authority.md  0006-redaction-plan-apply-model.md  0007-dense-retrieval-design.md  0008-edrm-privilege-log-protocol.md  0008-privilege-safeguard-integration.md  0009-web-ui-architecture.md
juul_docs/: download.csv
juul_docs/ffbb0396/: ffbb0396.ocr
juul_docs/ffbb0397/: ffbb0397.ocr
juul_docs/ffbb0398/: ffbb0398.ocr
juul_docs/ffbc0396/: ffbc0396.ocr
juul_docs/ffbc0397/: ffbc0397.ocr
juul_docs/ffbd0396/: ffbd0396.ocr  ffbd0396.redaction-plan.enc
juul_docs/ffbd0398/: ffbd0398.ocr  ffbd0398.redaction-plan.enc
juul_docs/ffbf0396/: ffbf0396.ocr
juul_docs/ffbf0397/: ffbf0397.ocr
juul_docs/ffbg0396/: ffbg0396.ocr
juul_docs/ffbg0397/: ffbg0397.ocr
juul_docs/ffbh0396/: ffbh0396.ocr
juul_docs/ffbh0397/: ffbh0397.ocr
juul_docs/ffbj0396/: ffbj0396.ocr
juul_docs/ffbj0397/: ffbj0397.ocr
juul_docs/ffbj0398/: ffbj0398.ocr
juul_docs/ffbk0396/: ffbk0396.ocr
juul_docs/ffbk0397/: ffbk0397.ocr
juul_docs/ffbl0396/: ffbl0396.ocr
juul_docs/ffbl0397/: ffbl0397.ocr
juul_docs/ffbm0396/: ffbm0396.ocr
juul_docs/ffbn0395/: ffbn0395.ocr
juul_docs/ffbn0396/: ffbn0396.ocr
juul_docs/ffbn0397/: ffbn0397.ocr
rexlit/: __init__.py  bootstrap.py  cli.py  config.py
scripts/: benchmark_idl.py  benchmark_privilege.py  download-fonts.sh  fetch_juul_data.py  run_dev_workflow.sh  run_tests.sh  setup-idl-fixtures.sh  setup-test-data.sh  setup_groq_key.py  test_groq_privilege.py  test_kanana_guardrail.py  test_kanana_siren.py  validate_idl_fixtures.py  validate_privilege_policy.py
tests/: __init__.py  conftest.py  test_adapter_hybrid.py  test_adapters_hnsw.py  test_app.py  test_app_adapters.py  test_architecture_contracts.py  test_audit.py  test_bates_collision_idempotency.py  test_bates_stamping_e2e.py  test_bates_verify.py  test_cli.py  test_cli_json_schema.py  test_cli_offline.py  test_cli_privilege_policy.py  test_cli_redaction_smoke.py  test_concept_detection.py  test_config.py  test_dense_ports.py  test_detection_control.py  test_determinism_e2e.py  test_highlight_escalation.py  test_highlight_paths.py  test_highlight_schema.py  test_hybrid_rrf.py  test_idl_integration.py  test_index.py  test_ingest.py  test_methods_appendix.py  test_ocr_tesseract.py  test_pack_service.py  test_pack_validate.py  test_pattern_concept_adapter.py  test_pdf_stamper_redactions.py  test_pii_encryption.py  test_pii_regex_adapter.py  test_privilege_audit_safety.py  test_privilege_classification.py  test_privilege_patterns_adapter.py  test_profiles_loader.py  (+8 more)
todos/: 001-ready-p1-parallel-document-processing.md  002-ready-p1-streaming-document-discovery.md  003-ready-p1-path-traversal-security.md  004-ready-p1-metadata-query-performance.md  005-ready-p1-audit-fsync-data-integrity.md  006-ready-p1-audit-hash-chain.md  pii_privilege_todo.md
ui/: package-lock.json  tsconfig.app.json  vite.config.ts
(+353 files in other folders)
